--- a/iCourse/iCourse.csproj
+++ b/iCourse/iCourse.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Polly" Version="8.4.0" />
   </ItemGroup>
 
 </Project>
