--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,17 +1,16 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: .NET
+name: Build and Package
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - main  # 根据你的实际主分支名称进行设置
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - main  # 根据你的实际主分支名称进行设置
 
 jobs:
   build:
-    name: Build
+    name: Build and Package
     runs-on: windows-latest
 
     steps:
@@ -31,3 +30,16 @@ jobs:
 
     - name: Publish
       run: dotnet publish --configuration Release --output ./publish
+
+    - name: Zip artifact
+      run: |
+        mkdir zip
+        $zipFilename = "build-artifact.zip"
+        Compress-Archive -Path ./publish -DestinationPath "./zip/$zipFilename" -Force
+      shell: powershell
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-artifact
+        path: ./zip/build-artifact.zip
