--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,7 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --configuration
+      run: dotnet build --configuration Release
 
     - name: Publish
       run: dotnet publish --configuration Release --output ./publish
