--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-﻿################################################################################
-# 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
-################################################################################
-
-/.vs/iCourse/FileContentIndex
+﻿# Visual Studio 2015/2017 cache/options directory
+.vs/
